# sysexy

./: README.md  pyproject.toml
sysexes/: vl70.txt
sysexes/old/: Patch internal.syx
sysexes/old/sources/: Prog-B-1.syx  VL70-A-1.syx  VL70-A-2.syx  VL70-B-1.syx
sysexes/prog/: A.sysex  B.sysex
sysexes/vl70/: A.sysex  A.syx  B.syx
sysexy/: __init__.py  __main__.py  invert.py  list_.py  vl70.py  write.py
vl70m/: VL70-B-1.syx  VL70-B-2.syx
vl70m/old/: Duplicate internal.syx  VL70 Reverse.syx  VL70 internal.syx
vl70m/sources/: Prog-A-1.syx  Prog-A-2.syx  Prog-B-2.syx  VL70-A-1.syx
