[project]
name = "sysexy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    "typer>=0.20.0",
]

[project.scripts]
sysexy = "sysexy.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
